test/spec_vectors/i32/fail/module_7.wat
(module (func $type-unary-operand-empty-in-br_if (i32.const 0) (block (br_if 0 (i32.eqz) (i32.const 1)) (drop))))